fix smaller screen size overlaps from hero

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ html {
   flex-direction: column;
 }
 
-h1 {
-  font-size: 3em;
+@media all and (min-width: 801px) {
+  h1 {
+    font-size: 3em;
+  }
 }
