--- a/src/components/HowItWorks/index.css
+++ b/src/components/HowItWorks/index.css
@@ -7,7 +7,6 @@
 }
 
 .how-it-works h2 {
-  font-size: 2em;
   font-weight: 300;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
@@ -52,8 +51,11 @@
 }
 
 /* picked a random size larger than a mobile device */
-@media screen and (min-width: 801px) {
+@media all and (min-width: 801px) {
   .how-it-works-item {
     flex: 1;
+  }
+  .how-it-works h2 {
+    font-size: 2em;
   }
 }
